[package]
name = "cicd"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.89"
bollard = "0.19.3"
bytes = "1.10.1"
dashmap = { version = "6.1.0", features = ["serde"] }
futures-util = "0.3.31"
itertools = "0.13.0"
petgraph = "0.6.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_yml = "0.0.12"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }
