[package]
name = "playmaker"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
bollard = "0.19.3"
bytes = "1.10.1"
dashmap = { version = "6.1.0", features = ["serde"] }
dyn-clone = "1.0.20"
futures-util = "0.3.31"
itertools = "0.13.0"
petgraph = "0.6.5"
serde = { version = "1.0.210", features = ["derive"] }
serde-saphyr = "0.0.12"
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = "0.7.17"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
